force-app/main/default/objects/Project__c/Project__c.object-meta.xml
<CustomObject>
    <description>Us 23 &amp; AC 23</description>
    <label>Project</label>
    <nameField>
        <displayFormat>{000}</displayFormat>
        <label>Project Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project_samle</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>