force-app/main/default/objects/Project__c/fields/AccountId__c.field-meta.xml
<CustomField>
    <fullName>AccountId__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Account Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Project_samle</relationshipLabel>
    <relationshipName>Project_samle</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>