force-app/main/default/objects/Project__c/fields/CreatedByld__c.field-meta.xml
<CustomField>
    <fullName>CreatedByld__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Created By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Project_samle</relationshipName>
    <type>Lookup</type>
</CustomField>