force-app/main/default/objects/Project__c/fields/OpporyunityName__c.field-meta.xml
<CustomField>
    <fullName>OpporyunityName__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>US 34</description>
    <label>Opportunity Name</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Project_samle</relationshipLabel>
    <relationshipName>Project_samle</relationshipName>
    <type>Lookup</type>
</CustomField>