force-app/main/default/objects/Project__c/fields/ProjectOwner_c__c.field-meta.xml
<CustomField>
    <fullName>ProjectOwner_c__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Project_samle1</relationshipName>
    <type>Lookup</type>
</CustomField>