force-app/main/default/objects/Project__c/fields/ProjectScope__c.field-meta.xml
<CustomField>
    <fullName>ProjectScope__c</fullName>
    <label>ProjectScope</label>
    <length>255</length>
    <type>Text</type>
</CustomField>