force-app/main/default/objects/Project__c/fields/TheTestField__c.field-meta.xml
<CustomField>
    <fullName>TheTestField__c</fullName>
    <label>The Test Field</label>
    <length>36</length>
    <type>Text</type>
</CustomField>